Bug 918682 - Fix the check for finding the root content document's root scroll frame. r=tn, a=lsblakk